Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -512,6 +512,7 @@
     "doc-type": "Tipo de documento",
     "document": "Documento",
     "document-configuration": "Configuración de documentos",
+    "document-not-found": "Dokument nebyl nalezen",
     "document-report": "Informe de documentos",
     "document-sequence": "Secuencia de documento",
     "document-sequences": "Secuencias de documentos",
@@ -1095,6 +1096,7 @@
     "new-customer": "nuevo cliente",
     "new-customers": "Nuevos clientes",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-line": "Nový řádek",
     "new-password": "Nueva contraseña",
     "new-price": "Nuevo precio",
     "new-product": "Nový produkt",
