--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -512,6 +512,7 @@
     "doc-type": "Dokumententyp",
     "document": "Dokument",
     "document-configuration": "Dokumenten Konfiguration",
+    "document-not-found": "Dokument nicht gefunden",
     "document-report": "Dokumentenbericht",
     "document-sequence": "Dokumentenfolge",
     "document-sequences": "Dokumentenfolge",
@@ -1095,6 +1096,7 @@
     "new-customer": "neuer Kunde",
     "new-customers": "Neue Kunden",
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
+    "new-line": "Neue Zeile",
     "new-password": "neues Passwort",
     "new-price": "Neuer Preis",
     "new-product": "Neues Produkt",
