--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -512,6 +512,7 @@
     "doc-type": "Document type",
     "document": "Document",
     "document-configuration": "Document configuration",
+    "document-not-found": "Document not found",
     "document-report": "Document report",
     "document-sequence": "Document sequence",
     "document-sequences": "Document sequences",
@@ -1095,6 +1096,7 @@
     "new-customer": "new customer",
     "new-customers": "New customers",
     "new-invoice-line-p": "Puede añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulse el botón línea para una línea sin producto.",
+    "new-line": "New line",
     "new-password": "New password",
     "new-price": "New price",
     "new-product": "New product",
