--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -512,6 +512,7 @@
     "doc-type": "Dokumentu mota",
     "document": "Dokumentua",
     "document-configuration": "Dokumentuen konfigurazioa",
+    "document-not-found": "Dokumentua ez da aurkitu",
     "document-report": "Dokumentuen txostena",
     "document-sequence": "Dokumentuaren sekuentzia",
     "document-sequences": "Dokumentuen sekuentzia",
@@ -1095,6 +1096,7 @@
     "new-customer": "bezero berria",
     "new-customers": "Bezero berriak",
     "new-invoice-line-p": "Produktu bat gehitu dezakezu produktuaren botoia sakatuz edo bere erreferentzia edo barra-kodea barra-kodearen eremuan idatziz. Edo sakatu lerro-botoia produkturik gabeko lerro baterako.",
+    "new-line": "Lerro berria",
     "new-password": "Pasahitz berria",
     "new-price": "Prezio berria",
     "new-product": "Produktu berria",
