--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -446,7 +446,7 @@
     "default-role": "Groupe d'utilisateurs par défaut",
     "default-tax": "Imposition par défaut",
     "default-to-company-email": "Par défaut à l'adresse e-mail de l'entreprise",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Par défaut vers l'adresse e-mail configurée",
     "default-to-user-email": "Par défaut à l'email de l'utilisateur",
     "default-warehouse": "Entrepôt par défaut",
     "delete": "supprimer",
@@ -512,6 +512,7 @@
     "doc-type": "Type de document",
     "document": "Document",
     "document-configuration": "Configuration des documents",
+    "document-not-found": "Document non trouvé",
     "document-report": "Rapports de documents",
     "document-sequence": "Numérotation des documents",
     "document-sequences": "Numérotations des documents",
@@ -1095,6 +1096,7 @@
     "new-customer": "nouveau client",
     "new-customers": "Nouveaux clients",
     "new-invoice-line-p": "Vous pouvez ajouter un produit en cliquant sur le bouton du produit ou en saisissant sa référence ou son code-barres dans le champ du code-barres. Ou appuyez sur le bouton de ligne pour une ligne sans produit.",
+    "new-line": "Nouvelle ligne",
     "new-password": "Nouveau mot de passe",
     "new-price": "Nouveau prix",
     "new-product": "Nouveau produit",
@@ -1774,7 +1776,7 @@
     "until-hour": "Jusqu'à l'heure",
     "until-subaccount": "Jusqu'au sous-compte",
     "update": "Mise à jour",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Mettre à jour les documents ouverts",
     "update-stock": "Mise à jour du stock",
     "update-supplier-prices": "Mise à jour des prix fournisseurs",
     "update-time": "Heure de mise à jour",
