--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -512,6 +512,7 @@
     "doc-type": "Tipo de documento",
     "document": "Documento",
     "document-configuration": "Configuración de documentos",
+    "document-not-found": "Documento non atopado",
     "document-report": "Informe de documentos",
     "document-sequence": "Secuencia de documento",
     "document-sequences": "Secuencias de documentos",
@@ -1095,6 +1096,7 @@
     "new-customer": "novo cliente",
     "new-customers": "Novos clientes",
     "new-invoice-line-p": "Podes engadir un produto premendo o botón produto ou escribindo a súa referencia ou código de barras no campo código de barras. Ou preme o botón liña para unha liña sen produto.",
+    "new-line": "Nova liña",
     "new-password": "Novo contrasinal",
     "new-price": "Novo prezo",
     "new-product": "Novo produto",
