--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -512,6 +512,7 @@
     "doc-type": "Tipo di documento",
     "document": "Documento",
     "document-configuration": "Configurazione documenti",
+    "document-not-found": "Documento non trovato",
     "document-report": "Reports documenti",
     "document-sequence": "sequenza del documento",
     "document-sequences": "sequenze di documenti",
@@ -1095,6 +1096,7 @@
     "new-customer": "cliente nuovo",
     "new-customers": "nuovi-clienti",
     "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
+    "new-line": "Nuova riga",
     "new-password": "nuova password",
     "new-price": "Nuovo prezzo",
     "new-product": "Nuovo prodotto",
