--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -512,6 +512,7 @@
     "doc-type": "Typ dokumentu",
     "document": "Dokument",
     "document-configuration": "Konfiguracja dokumentów",
+    "document-not-found": "Dokument nie został znaleziony",
     "document-report": "Raport dokumentów",
     "document-sequence": "Sekwencja dokumentu",
     "document-sequences": "Sekwencje dokumentów",
@@ -1095,6 +1096,7 @@
     "new-customer": "nowy klient",
     "new-customers": "Nowi klienci",
     "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
+    "new-line": "Nowy wiersz",
     "new-password": "Nowe hasło",
     "new-price": "Nowa cena",
     "new-product": "Nowy produkt",
