--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -512,6 +512,7 @@
     "doc-type": "Tipo de documento",
     "document": "Documento",
     "document-configuration": "Configuração de documentos",
+    "document-not-found": "Documento não encontrado",
     "document-report": "Relatório de documentos",
     "document-sequence": "sequencia-documento",
     "document-sequences": "Sequências de documentos",
@@ -1095,6 +1096,7 @@
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
     "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
+    "new-line": "Nova linha",
     "new-password": "Nova senha",
     "new-price": "Novo preço",
     "new-product": "Novo produto",
