--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -512,6 +512,7 @@
     "doc-type": "Tipo de document",
     "document": "Document",
     "document-configuration": "Configuració de documents",
+    "document-not-found": "Document no trobat",
     "document-report": "Informe dels documents",
     "document-sequence": "Seqüència del document",
     "document-sequences": "Seqüències del documents",
@@ -1095,6 +1096,7 @@
     "new-customer": "Nou client",
     "new-customers": "Nous clients",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-line": "Nueva línea",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
     "new-product": "Nou producte",
