--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -512,6 +512,7 @@
     "doc-type": "Tipus de document",
     "document": "Document",
     "document-configuration": "Configuració de documents",
+    "document-not-found": "Document no trobat",
     "document-report": "Informe de documents",
     "document-sequence": "Seqüència de document",
     "document-sequences": "Seqüències de documents",
@@ -1095,6 +1096,7 @@
     "new-customer": "Nou client",
     "new-customers": "Nous clients",
     "new-invoice-line-p": "Pots afegir un producte prement el botó producte o escrivint la seva referència o codi de barres al camp codi de barres. O prem el botó línia per a una línia sense producte.",
+    "new-line": "Nova línia",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
     "new-product": "Nou producte",
