Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1776,7 +1776,7 @@
     "until-hour": "bis zur Stunde",
     "until-subaccount": "Bis Unterkonto",
     "update": "aktuallisieren",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Geöffnete Dokumente aktualisieren",
     "update-stock": "Lagerbestand aktualisieren",
     "update-supplier-prices": "aktullieren Lieferantenpreise",
     "update-time": "Aktuallierungszeit",
