--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -980,6 +980,7 @@
     "login": "Iniciar sesión",
     "login-cookie-fail": "Neplatný relační cookie",
     "login-image": "Imagen de login",
+    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-changed": "Heslo bylo úspěšně změněno",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
