--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -980,6 +980,7 @@
     "login": "Iniciar sesión",
     "login-cookie-fail": "Cookie de sesión no válida: probablemente haya iniciado sesión desde otro dispositivo o navegador.",
     "login-image": "Imagen de login",
+    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-changed": "Contraseña cambiada correctamente",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
