--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -980,6 +980,7 @@
     "login": "Entrar",
     "login-cookie-fail": "Cookie de sessão inválida: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
+    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
     "login-password-changed": "Senha alterada com sucesso",
     "login-password-fail": "Falha na autenticação",
