--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -97,7 +97,7 @@
     "already-installed": "Déjà installé",
     "already-installed-p": "Le programme est déjà installé",
     "always-to-company-email": "Toujours à l'email de l'entreprise",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Toujours vers l'adresse e-mail de la configuration",
     "amount": "Montant",
     "amount-without-discount": "Quantité sans remise",
     "and": "et",
