Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Conceptos Predefinidos",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
@@ -1777,7 +1778,7 @@
     "until-hour": "Hora fin",
     "until-subaccount": "Hasta subcuenta",
     "update": "Actualizar",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Aktualizovat otevřené dokumenty",
     "update-stock": "Actualizar stock",
     "update-supplier-prices": "Actualizar precios de proveedores",
     "update-time": "Hora de actualización",
