--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -446,7 +446,7 @@
     "default-role": "Standard Benutzergruppe",
     "default-tax": "Standardsteuer",
     "default-to-company-email": "Standardmäßig an die E-Mail des Unternehmens",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Standardmäßig an die E-Mail aus der Konfiguration",
     "default-to-user-email": "Standardmäßig an die Benutzer-E-Mail",
     "default-warehouse": "Standard Lager",
     "delete": "entfernen",
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Vordefinierte Konzepte",
     "preferences": "Vorlieben",
     "preview": "Vorschau",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "vorherige",
     "previous-balance": "Vorheriger Saldo",
     "previous-documents": "vorherige Dokumente",
