--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Predefined Concepts",
     "preferences": "Preferences",
     "preview": "Preview",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Previous",
     "previous-balance": "Previous Balance",
     "previous-documents": "Previous documents",
