--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Aurretik zehaztutako kontzeptuak",
     "preferences": "Hobespenak",
     "preview": "Aurreikusi",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Aurrekoa",
     "previous-balance": "Aurreko balantzea",
     "previous-documents": "Aurretiko dokumentuak",
