--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -732,7 +732,7 @@
     "full-path": "Percorso completo",
     "gap-found": "Gap trovato per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%",
     "gap-found-not-fillable": "È stato trovato un buco per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%; tuttavia non verrà compilato.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gaps-out-of-range": "Sono stati trovati %count% buchi che non potranno essere riempiti perché sono a più di 1000 numeri dall'ultimo.",
     "general": "Generale",
     "general-concepts": "Concetti generali",
     "general-data": "informazioni generali",
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Concetti Predefiniti",
     "preferences": "Preferencias",
     "preview": "Anteprima",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "precedente",
     "previous-balance": "Saldo precedente",
     "previous-documents": "Documenti precedenti",
@@ -1777,7 +1778,7 @@
     "until-hour": "Fino all'ora",
     "until-subaccount": "Fino a subconto",
     "update": "aggiornare",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Aggiorna documenti aperti",
     "update-stock": "Aggiorna stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "Orario di aggiornamento",
