--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -446,7 +446,7 @@
     "default-role": "Domyślna grupa użytkowników",
     "default-tax": "Domyślny podatek",
     "default-to-company-email": "Domyślnie na e-mail firmy",
-    "default-to-config-email": "Por defecto al email de la configuración",
+    "default-to-config-email": "Domyślnie na adres e-mail z konfiguracji",
     "default-to-user-email": "Domyślnie na email użytkownika",
     "default-warehouse": "Domyślny magazyn",
     "delete": "Usuń",
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Predefiniowane pojęcia",
     "preferences": "Preferencje",
     "preview": "Podgląd",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Poprzedni",
     "previous-balance": "Poprzedni bilans",
     "previous-documents": "Dokumenty poprzednie",
@@ -1556,7 +1557,7 @@
     "sort-by-balance-asc": "Sortuj według salda rosnąco",
     "sort-by-balance-desc": "Sortuj według salda malejąco",
     "sort-by-code-asc": "Sortuj według kodu rosnąco",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Sortuj według kodu malejąco",
     "sort-by-column": "Sortuj wg kolumny",
     "sort-by-credit-asc": "Sortuj według kredytu rosnąco",
     "sort-by-credit-desc": "Sortuj według kredytu malejąco",
