--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Conceitos Predefinidos",
     "preferences": "Preferências",
     "preview": "Pré-visualizar",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "Documentos anteriores",
