--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Conceptes Predeterminats",
     "preferences": "Preferències",
     "preview": "Previsualitzar",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Anterior",
     "previous-balance": "Balanç anterior",
     "previous-documents": "Documents previs",
