--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -874,7 +874,7 @@
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
     "invoice-regularized-cant-change-date": "La factura se encuentra dentro de una regularización de %tax%. No se puede modificar la fecha.",
     "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
-    "invoice-without-acc-entry": "Se han encontrado factura sin asiento contable. Ve al listado de facturas y pulsa el botón de generar asientos.",
+    "invoice-without-acc-entry": "Factura sin asiento contable",
     "invoiced": "Facturado",
     "invoices": "Facturas",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
@@ -1297,6 +1297,7 @@
     "predefined-concepts": "Conceptos Predefinidos",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
+    "preview-not-available": "Previsualización no disponible",
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
