Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1755,6 +1755,7 @@
     "type-success": "Tipus correcte",
     "type-warning": "Tipus advertència",
     "unbalance": "Desquadrament",
+    "unbalanced-accounting-entry": "Assentament descuadrat",
     "unbalanced-entry": "Seient desquadrat",
     "unchecked": "Sense comprovar",
     "under-minimums": "Sota mínims",
