--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1755,6 +1755,7 @@
     "type-success": "Typ erfolgreich",
     "type-warning": "Warnungstyp",
     "unbalance": "Unausgeglichen",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Ungebalancierte Buchung",
     "unchecked": "Nicht überprüft",
     "under-minimums": "Unterhalb der Mindestgrenzen",
