--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -980,7 +980,7 @@
     "login": "Login",
     "login-cookie-fail": "Session cookie failed",
     "login-image": "Login image",
-    "login-invalid-db-password": "Contraseña de base de datos incorrecta",
+    "login-invalid-db-password": "Incorrect database password",
     "login-ok": "Login successfully (cookie). User: '%nick%'",
     "login-password-changed": "Password changed successfully",
     "login-password-fail": "Login failed",
@@ -1297,7 +1297,7 @@
     "predefined-concepts": "Predefined Concepts",
     "preferences": "Preferences",
     "preview": "Preview",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Preview not available",
     "previous": "Previous",
     "previous-balance": "Previous Balance",
     "previous-documents": "Previous documents",
@@ -1755,6 +1755,7 @@
     "type-success": "Type success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
+    "unbalanced-accounting-entry": "Unbalanced accounting entry",
     "unbalanced-entry": "Unbalanced entry",
     "unchecked": "Unchecked",
     "under-minimums": "Under minimums",
