--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -1755,6 +1755,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo de advertencia.",
     "unbalance": "Error de cierre.",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
