--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1755,6 +1755,7 @@
     "type-success": "Mota zuzena",
     "type-warning": "Ohar mota",
     "unbalance": "Deskuadrea",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Idazpen okerra",
     "unchecked": "Egiaztatu gabe",
     "under-minimums": "Minimoaren azpitik",
