--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1755,6 +1755,7 @@
     "type-success": "type succès",
     "type-warning": "Type avertissement",
     "unbalance": "Déséquilibre",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Siège non ajusté",
     "unchecked": "Non vérifié",
     "under-minimums": "Sous les minima",
