--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1755,6 +1755,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Asento descuadrado",
     "unchecked": "Non comprobado",
     "under-minimums": "Baixo mínimos",
