--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -879,7 +879,7 @@
     "invoices": "Faktury",
     "invoices-cant-generate-new-docs": "Faktury nie mogą generować nowych dokumentów",
     "ip": "IP",
-    "ip-banned": "Z powodów bezpieczeństwa dostęp z Twojego IP został tymczasowo zablokowany.",
+    "ip-banned": "Ze względów bezpieczeństwa dostęp z Twojego adresu IP został zablokowany na 10 minut.",
     "irpf": "IRPF",
     "irpf-record-not-found": "Rekord IRPF %value%% nie został znaleziony.",
     "irpf-subaccount-not-found": "Nie znaleziono subkonta IRPF",
@@ -1230,7 +1230,7 @@
     "payment-methods": "Formy płatności",
     "payments": "Płatności",
     "paypal": "PayPal",
-    "pct": "% pct",
+    "pct": "% proc.",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% nadpłaty",
     "pct-tax": "% podatku",
@@ -1755,6 +1755,7 @@
     "type-success": "Typ poprawny",
     "type-warning": "Typ ostrzeżenia",
     "unbalance": "Nierównowaga",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Niezweryfikowany",
     "under-minimums": "Poniżej minimum",
