--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1755,6 +1755,7 @@
     "type-success": "Tipo correto",
     "type-warning": "Tipo de aviso",
     "unbalance": "Desequilíbrio",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Lançamento descuadrado",
     "unchecked": "Sem checar",
     "under-minimums": "Abaixo dos mínimos",
