--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1755,6 +1755,7 @@
     "type-success": "type-success",
     "type-warning": "Tipo advertència",
     "unbalance": "Desquadre",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Asentament desequilibrat",
     "unchecked": "Sense comprovar",
     "under-minimums": "under-minimums",
