--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1755,6 +1755,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Nevyrovnaný záznam",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
