--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -1158,7 +1158,7 @@
     "number-recipients": "Nº perceptores",
     "number2": "NCF",
     "numeric-formats": "Formatos numéricos",
-    "numsupplier": "NCF Proveedor",
+    "numsupplier": "Núm. proveedor",
     "observations": "Observaciones",
     "october": "Octubre",
     "offsetting-account": "Cuenta para contrapartida",
@@ -1755,6 +1755,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
