--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1755,6 +1755,7 @@
     "type-success": "Tipo corretto",
     "type-warning": "Tipo avviso",
     "unbalance": "sbilanciato",
+    "unbalanced-accounting-entry": "Asiento descuadrado",
     "unbalanced-entry": "Prenotazione non bilanciata",
     "unchecked": "Non verificato",
     "under-minimums": "Sotto minimi",
