--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1297,7 +1297,7 @@
     "predefined-concepts": "Predefiniowane pojęcia",
     "preferences": "Preferencje",
     "preview": "Podgląd",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Podgląd niedostępny",
     "previous": "Poprzedni",
     "previous-balance": "Poprzedni bilans",
     "previous-documents": "Dokumenty poprzednie",
