--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -97,7 +97,7 @@
     "already-installed": "Ja instal·lat",
     "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Sempre a l'email de la configuració",
     "amount": "Import",
     "amount-without-discount": "Preu sense desconte",
     "and": "i",
