Actualizadas las traducciones.

--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1779,7 +1779,7 @@
     "until-hour": "Hora de fim",
     "until-subaccount": "Até subconta",
     "update": "Atualizar",
-    "update-docs-address": "Actualizar documentos abiertos",
+    "update-docs-address": "Atualizar documentos abertos",
     "update-stock": "Atualizar stock",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
