Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1755,7 +1755,7 @@
     "type-success": "Tipo corretto",
     "type-warning": "Tipo avviso",
     "unbalance": "sbilanciato",
-    "unbalanced-accounting-entry": "Asiento descuadrado",
+    "unbalanced-accounting-entry": "Registrazione contabile non bilanciata",
     "unbalanced-entry": "Prenotazione non bilanciata",
     "unchecked": "Non verificato",
     "under-minimums": "Sotto minimi",
