Actualizada la versión.

--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1297,7 +1297,7 @@
     "predefined-concepts": "Concepts prédéfinis",
     "preferences": "Préférences",
     "preview": "Prévisualisation",
-    "preview-not-available": "Previsualización no disponible",
+    "preview-not-available": "Aperçu non disponible",
     "previous": "précédent",
     "previous-balance": "Solde précédent",
     "previous-documents": "Documents précédents",
