--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -613,7 +613,7 @@
     "es-tax-exception-e5": "Hiszpania: wyjątek na podstawie artykułu 25 ustawy o VAT",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-exception-location-rules": "Hiszpania: N2 Niepodlegające opodatkowaniu – Zasady ustalania miejsca świadczenia usług (art. 69–70 LIVA, usługi B2B w UE lub poza UE)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operacje krajowe zwolnione zgodnie z artykułem 10.1 ustawy 20\/1991 o IGIC",
     "es-tax-exception-n5": "Operacje zwolnione na podstawie art. 25 ustawy o IGIC",
     "es-tax-exception-passive-subject": "Wyjątek podatkowy (podmiot bierny)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
