Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1571,7 +1571,7 @@
     "sort-by-price-desc": "Sortuj według ceny malejąco",
     "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
     "sort-by-ref-desc": "Sortuj wg referencji malejąco",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-asc": "Sortuj według stanu magazynowego rosnąco",
     "sort-by-stock-desc": "Sortuj według stanu magazynowego (malejąco)",
     "sorted-asc": "Posortowane rosnąco",
     "sorted-desc": "Posortowane malejąco",
