Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1755,7 +1755,7 @@
     "type-success": "Typ poprawny",
     "type-warning": "Typ ostrzeżenia",
     "unbalance": "Nierównowaga",
-    "unbalanced-accounting-entry": "Asiento descuadrado",
+    "unbalanced-accounting-entry": "Niezbilansowany zapis księgowy",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Niezweryfikowany",
     "under-minimums": "Poniżej minimum",
